--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,9 +1,7 @@
 ---
-title: "My title"
+title: "STA304 Paper #1"
 subtitle: "My subtitle if needed"
-author: 
-  - First author
-  - Another author
+author: "Ziyao Han"
 thanks: "Code and data are available at: LINK."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
