--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -2,10 +2,10 @@
 title: "STA304 Paper #1"
 subtitle: "My subtitle if needed"
 author: "Ziyao Han"
-thanks: "Code and data are available at: LINK."
-date: "`r format(Sys.time(), '%d %B %Y')`"
+thanks: "Code and data are available at: https://github.com/HanFrank/STA304-Paper-1"
+date: "February 6, 2022"
 abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
-output:
+output: 
   bookdown::pdf_document2
 toc: FALSE
 bibliography: references.bib
@@ -15,69 +15,57 @@ bibliography: references.bib
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
-library(palmerpenguins)
+library(knitr)
 ```
 
 # Introduction
 
-You can and should cross-reference sections and sub-sections. For instance, Section \@ref(data). R Markdown automatically makes the sections lower case and adds a dash to spaces to generate labels, for instance, Section \@ref(first-discussion-point). 
+First Paragraph is going to be motivational and broad.
+
+Second Paragraph is about what was done and what was found.
+
+Third paragraph is about implications.
+
+Final Paragraph about the remainder of the paper.
+
+Here's a dumb example of how to use some references: In paper we run our analysis in `R` [@citeR]. We also use the `tidyverse` which was written by [@citeTidy] If we were interested in baseball data then could be useful. [@citebookdown] also [@citeknitr] data [@citeodt] 
 
 
 
 # Data
 
-Our data is of penguins (Figure \@ref(fig:bills)).
+Paragraph or two introducing the dataset broadly.
 
-```{r bills, fig.cap="Bills of penguins", echo = FALSE}
-ggplot(penguins, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("darkorange","purple","cyan4"),
-                    guide = FALSE) +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
+Then show an extract of the dataset (Table \@ref(tab:extract)).
+
+```{r extract, echo = FALSE, warning = FALSE, message = FALSE}
+monthly_shelter_usage <- read_csv(here::here("inputs/data/filler_data.csv"))
+
+monthly_shelter_usage %>%
+  select(population_group, returned_from_housing) %>%
+  slice(1:10) %>%
+  kable(
+    caption = "First ten rows of a dataset that shows shelter usage",
+    col.names = c("Population Group", "Number returned from housing"),
+    digits = 1,
+    booktabs = TRUE,
+    linesep=""
+  )
 ```
 
-Talk more about it.
+Paragraph or two more about it
 
 Also bills and their average (Figure \@ref(fig:billssssss)). (Notice how you can change the height and width so they don't take the whole page?)
 
 ```{r billssssss, fig.cap="More bills of penguins", echo = FALSE, fig.width=8, fig.height=4}
-
-# This needs to be about the random data tha tI sasmpled?
-ggplot(penguins, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("darkorange","purple","cyan4"),
-                    guide = FALSE) +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
+# This needs to be about the random data that I sampled?
 ```
 
 Talk way more about it. 
 
-
-
-# Model
-
-\begin{equation}
-Pr(\theta | y) = \frac{Pr(y | \theta) Pr(\theta)}{Pr(y)}  (\#eq:bayes)
-\end{equation}
-
-Equation \@ref(eq:bayes) seems useful, eh?
-
-Here's a dumb example of how to use some references: In paper we run our analysis in `R` [@citeR]. We also use the `tidyverse` which was written by @thereferencecanbewhatever If we were interested in baseball data then @citeLahman could be useful. 
-
-We can use maths by including latex between dollar signs, for instance $\theta$.
-
-
-# Results
-
 # Discussion
 
 ## First discussion point
-
-If my paper were 10 pages, then should be be at least 2.5 pages. The discussion is a chance to show off what you know and what you learnt from all this. 
 
 ## Second discussion point
 
@@ -88,17 +76,6 @@ If my paper were 10 pages, then should be be at least 2.5 pages. The discussion 
 Weaknesses and next steps should also be included.
 
 \newpage
-
-\appendix
-
-# Appendix {-}
-
-
-# Additional details
-
-
-\newpage
-
 
 # References
 
