--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -8,7 +8,7 @@
   }
   
   
-@Article{thereferencecanbewhatever,
+@Article{citeTidy,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -18,12 +18,33 @@
     pages = {1686},
     doi = {10.21105/joss.01686},
   }  
+
+@Book{citebookdown,
+    title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    address = {Boca Raton, Florida},
+    year = {2016},
+    note = {ISBN 978-1138700109},
+    url = {https://bookdown.org/yihui/bookdown},
+  }
+
+@InCollection{citeknitr,
+    booktitle = {Implementing Reproducible Computational Research},
+    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    year = {2014},
+    note = {ISBN 978-1466561595},
+    url = {http://www.crcpress.com/product/isbn/9781466561595},
+  }
   
-  
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
+@Manual{citeodt,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
     year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
+    note = {https://sharlagelfand.github.io/opendatatoronto/,
+https://github.com/sharlagelfand/opendatatoronto/},
+  }
+  
