--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -98,3 +98,11 @@ https://github.com/sharlagelfand/opendatatoronto/},
     year = {2020},
     url = {https://palletshelter.com/blog/2020-5-20-why-the-homeless-dont-accept-shelter/},
 }
+
+@Manual{citeyarna,
+    title = {Converting a yy-mm character into date format},
+    author = {Yarnabrina},
+    publisher = {RStudio Community},
+    year = {2019},
+    url = {https://community.rstudio.com/t/converting-a-yy-mm-character-into-date-format/30274},
+}
