--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -106,3 +106,43 @@ https://github.com/sharlagelfand/opendatatoronto/},
     year = {2019},
     url = {https://community.rstudio.com/t/converting-a-yy-mm-character-into-date-format/30274},
 }
+
+@Manual{citetimeline,
+    title = {Timeline: A year of pandemic life in Toronto},
+    author = {Michael Ranger},
+    publisher = {CityNews Toronto},
+    year = {2021},
+    url = {https://toronto.citynews.ca/2021/03/11/timeline-a-year-of-pandemic-life/},
+}
+
+@Article{citefacets,
+    title = {Seeking shelter: homelessness and COVID-19},
+    author = {Stefan Baral, Andrew Bond, Andrew Boozary, Eva Bruketa, Nika Elmi, Deirdre Freiheit, S. Monty Ghosh, Marie Eve Goyer, Aaron M. Orkin, Jamie Patel, Tim Richter, Angela Robertson, Christy Sutherland, Tomislav Svoboda, Jeffrey Turnbull, Alexander Wong, and Alice Zhu},
+    volume = {6},
+    number = {1},
+    year = {2021},
+    journal = {Facets},
+    doi = {https://doi.org/10.1139/facets-2021-0004},
+}
+  
+@Manual{citewinter,
+    title = {Toronto's homeless community sounds alarm on difficulties securing shelter space as temperatures plunge},
+    author = {Abby Neufeld},
+    publisher = {CTV News},
+    year = {2022},
+    url = {https://toronto.ctvnews.ca/toronto-s-homeless-community-sounds-alarm-on-difficulties-securing-shelter-space-as-temperatures-plunge-1.5736143},
+}
+
+@Manual{citehomelesshub,
+    title = {Addressing Chronic Homelessness},
+    author = {Homeless Hub},
+    year = {2021},
+    url = {https://www.homelesshub.ca/solutions/prevention/addressing-chronic-homelessness},
+}
+
+@Manual{citegenderdisparity,
+    title = {Demographic Data Project: Gender and Individual Homelessness},
+    author = {National Alliance to End Homelessness},
+    year = {2018},
+    url = {https://endhomelessness.org/demographic-data-project-gender-and-individual-homelessness/},
+}
