Finish polishing of paper

--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -117,7 +117,7 @@ https://github.com/sharlagelfand/opendatatoronto/},
 
 @Article{citefacets,
     title = {Seeking shelter: homelessness and COVID-19},
-    author = {Stefan Baral, Andrew Bond, Andrew Boozary, Eva Bruketa, Nika Elmi, Deirdre Freiheit, S. Monty Ghosh, Marie Eve Goyer, Aaron M. Orkin, Jamie Patel, Tim Richter, Angela Robertson, Christy Sutherland, Tomislav Svoboda, Jeffrey Turnbull, Alexander Wong, and Alice Zhu},
+    author = {Stefan Baral, Andrew Bond, Andrew Boozary, Eva Bruketa, Nika Elmi, Deirdre Freiheit, S. Monty Ghosh, Marie Eve Goyer, Aaron M. Orkin, Jamie Patel, Tim Richter, Angela Robertson, Christy Sutherland, Tomislav Svoboda, Jeffrey Turnbull, Alexander Wong, Alice Zhu},
     volume = {6},
     number = {1},
     year = {2021},
