--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,13 +1,13 @@
 ---
 title: "An Analysis of Homelessness in Toronto in regards to COVID-19 and other factors"
-subtitle: "Statisical analysis from January 2020 to December 2021"
+subtitle: "Statistical analysis from January 2020 to December 2021"
 author: "Ziyao Han"
 thanks: "Code and data are available at: https://github.com/HanFrank/Homelessness-Analysis-of-Toronto"
-date: "February 6, 2022"
+date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "A well functioning shelter system and its accompanying services should be an essential part of the nervous system of a well-run city. This report uses data collected from Open Data Toronto and applies statistical visualization, past and present literature to analyse the homelessness situation in Toronto. The data shows that COVID-19 has had a significant impact on shelter usage and is a predominant factor in shelter usage and the homelessness situation in Toronto within the last two years. This report uses a range of data to analyse the shelter system to provide insight into the ongoing fight against homelessness."
 output: 
   bookdown::pdf_document2
-toc: TRUE
+toc: FALSE
 bibliography: references.bib
 ---
 
@@ -53,7 +53,7 @@ The Shelter, Support & Housing Administration Division of the City of Toronto is
 
 Since the data is collected from people accessing the homelessness services operated or managed by the City of Toronto, this data does not contain people who have been used these services such as people sleeping exclusively outdoors or using other homelessness services that are not using the Shelter Management Information System (SMIS). According to the dataset, based on a recent Street Needs Assessment (A city-wide count and survey of people experiencing homelessness in Toronto [@citesna]), there is an anticipated 18 per cent of people experiencing homelessness in Toronto that is not reflected in this dataset [@citedata].
 
-There is a variety of reasons a person experiencing homelessness will not seek help from a shelter system. An example of this could be to avoid shelter restrictions such as curfews. Another potential reason, especially during the Covid-19 pandemic, is public health concerns [@citepallet]. This specific topic will be discussed further in section \@ref(covid).
+There is a variety of reasons a person experiencing homelessness will not seek help from a shelter system. An example of this could be to avoid shelter restrictions such as curfews. Another potential reason, especially during the COVID-19 pandemic, is public health concerns [@citepallet]. This specific topic will be discussed further in Section \@ref(covid).
 
 ## Data Characteristics
 
@@ -61,7 +61,7 @@ The original dataset contained 180 observations with 18 variables. These 180 obs
 
 Table \@ref(tab:extract) is an extract of the dataset from January 2020, with a few samples of variables of interest. To be noted, since the cleaned dataset uses the date format, 2020-01-01 represents January 2020. Moreover, for example, 2021-08-01 would represent August 2021.
 
-```{r extract, echo = FALSE, warning = FALSE, message = FALSE, fig.align="center"}
+```{r extract, echo = FALSE, warning = FALSE, message = FALSE}
 # Showing an extract of the total dataset as a sample
 monthly_shelter_usage %>%
   select(date, population_group, actively_homeless, population_group_percentage) %>%
@@ -81,7 +81,7 @@ monthly_shelter_usage %>%
 
 Figure \@ref(fig:graph1) shows the total number of people that are actively accessing homelessness services over the course of the two year period between January 2020 and December 2021. The red dotted line in the figure represents March 2020 the beginning of the COVID-19 response in Toronto and in much of the world [@citetimeline]. 
 
-```{r graph1, fig.cap="Active number of homeless over time", echo=FALSE, fig.height=4, fig.width=6}
+```{r graph1, fig.cap="Active shelter usage over time", echo=FALSE, fig.height=5, fig.width=6}
 # Creating subset of only total population
 total_population <- monthly_shelter_usage[monthly_shelter_usage$population_group == "All Population",]
 # Plotting total usage of homeless shelter over time and overlaying start of covid
@@ -90,11 +90,11 @@ geom_line() +
 # Drawing dotted red line for covid
 geom_line(aes(x=as.Date("2020-03-01"), col = "COVID-19 response begins in Toronto"), linetype="dotted") + 
 labs(x = "Date", 
-     y = "Actively Homeless", 
+     y = "Actively Shelter Usage", 
      title =  "Usage of Homeless shelters dropping due to COVID-19",
      col = "Event: ") +
 theme_minimal() +
-theme(legend.position = "bottom")
+theme(legend.position = "bottom") # Putting legend on the bottom for aesthetic reasons 
 ```
 
 Figure \@ref(fig:graph1) shows a massive reduction in shelter usage right after the beginning of COVID-19 in Toronto. This is likely due to public health concerns regarding going to homeless shelters due to the lack of ability to socially distance, maintain hygiene, or isolate [@citefacets]. Additionally, shelter space is further limited due to shelter capacities and distancing guidelines. In the warmer months, much of the reduced shelter usage can be explained by people sleeping outdoors in order to avoid public shelters. However, in the winter months, shelter usage begins to rise as seen in the winter months of 2020-2021 [@citewinter]. 
@@ -103,13 +103,14 @@ Starting in around April 2021, shelter usage begins to significantly increase to
 
 ### Chronic shelter usage is stable
 
-Figure \@ref(fig:graph2) shows the active number of homeless people in each population group of the dataset. Almost all population groups share a similar behaviour, with one notable exception, the chronic homeless population group.
+Figure \@ref(fig:graph2) shows the active number of shelter usages in each population group of the dataset. Almost all population groups share a similar behaviour, with one notable exception, the chronic homeless population group.
 
-```{r graph2, fig.cap="Active number of homeless over time for each population group",fig.height=4, echo=FALSE}
+```{r graph2, fig.cap="Active shelter usage over time for each population group",fig.height=4, echo=FALSE}
+# Creating plot with colour representing each population group
 ggplot(monthly_shelter_usage, mapping = aes(x = date, y = actively_homeless, colour = population_group)) +
 geom_line() +
 labs(x = "Date", 
-     y = "Actively Homeless", 
+     y = "Actively Shelter Usage", 
      title =  "Chronic shelter usage remains stable through COVID-19",
      caption = "Began tracking Indigenous numbers in Jan 2021",) +
 theme_minimal()
@@ -158,23 +159,23 @@ gender_table %>%
 
 From initial inspection of Table \@ref(tab:gendertable), we can notice a significant disparity between the percentage of Male and Female shelter usage. However, this appears to be the norm, and actually on the higher end of Female representation. According to data from the United States in 2018, on average 70% of individuals experiencing homelessness are Men followed by 29% by Women and 1% for Transgender and Non-binary individuals [@citegenderdisparity]. If Toronto was an American State, it would rank in the top 5 of highest ratios of Female representation. 
 
-Low female representation in homelessness numbers could be due to a variety of factors. Women and children are often especially concerned about conflict and abuse due to the public nature of homeless shelters. This would be of even greater concern for victims of sexual abuse that are seeking refuge or are temporarily homeless, may intentionally avoid homelessness shelters or services [@citepallet]. This is an extremely expansive topic that could be an area of further exploration as discussed in section \@ref(further).
+Low female representation in homelessness numbers could be due to a variety of factors. Women and children are often especially concerned about the possibility of conflict and abuse due to the public nature of homeless shelters. This would be of even greater concern for victims of sexual abuse that are seeking refuge or are temporarily homeless, may intentionally avoid homelessness shelters or services [@citepallet]. This is an extremely expansive topic that could be an area of further exploration as discussed in Section \@ref(further).
 
 ## Movement between Permanant Housing
 
-Figure \@ref(fig:graph3) shows the number of people moving to and from permanent housing during the two year period. The red line indicates the number people leaving the shelter system by obtaining permanent housing and the blue line represents the number of people reentering the shelter system after moving to permanent housing. 
+Figure \@ref(fig:graph3) shows the number of people moving to and from permanent housing during the two year period. The red line indicates the number of people leaving the shelter system by obtaining permanent housing and the blue line represents the number of people reentering the shelter system after moving to permanent housing. 
 
 ```{r graph3, fig.cap="Movement between Permanent housing", echo=FALSE, fig.height=4, fig.width=6}
+# Creating plot with two lines, one for moved and one for returned
 ggplot(total_population, aes(x = date)) +
 geom_line(aes(y = moved_to_housing, col = "Moved")) +
 geom_line(aes(y = returned_from_housing, col = "Returned")) + 
-# Drawing dotted red line for covid
 labs(x = "Date", 
      y = "# of people", 
      title =  "People moving to permanent housing dropping significantly",
      col = "Action: ") +
 theme_minimal() +
-theme(legend.position = "bottom")
+theme(legend.position = "bottom") # Putting legend on the bottom for aesthetic reasons 
 ```
 
 The trend noticeable in Figure \@ref(fig:graph3) is quite concerning. The number of people moving to permanent housing is rapidly decreasing as a function of time. The initial drop due to COVID-19 is understandable. However, unlike shelter usage numbers, the moved to housing number does not appear to be recovering. This is compounded by the behaviour of the returned from housing number. It appears that a consistent number of people are losing permanent housing while the moved to housing number continues to drop. Ideally, to reduce homelessness in a city, the red line should be positive while the blue line should be negative. I think this is a great visualization of the true trend of homelessness in Toronto within the last two years.
